# lamalang

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/1/: main.lama  other.lama
src/: ast.rs  error.rs  fs.rs  main.rs  modules.rs  options.rs  span.rs
src/backend/: interpreter.rs  js.rs  mod.rs  print_ast.rs
src/checker/: db.rs  mod.rs  scope.rs
src/lamalib/core/: lib.lama  ops.lama
src/parser/: grammar.pest  mod.rs
